tests/baselines/reference/exportEqualMemberMissing.errors.txt
exportEqualMemberMissing_0.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
exportEqualMemberMissing_1.ts(3,23): error TS2339: Property 'static' does not exist on type '{ (): connectExport; foo: Date; }'.


==== exportEqualMemberMissing_1.ts (1 errors) ====
    ///<reference path='exportEqualMemberMissing_0.ts'/>
    import connect = require('./exportEqualMemberMissing_0');
    connect().use(connect.static('foo')); // Error	1	The property 'static' does not exist on value of type ''.
                          ~~~~~~
!!! error TS2339: Property 'static' does not exist on type '{ (): connectExport; foo: Date; }'.
    
==== exportEqualMemberMissing_0.ts (1 errors) ====
    module server {
           ~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface connectModule {
            (res, req, next): void;
        }
        export interface connectExport {
            use: (mod: connectModule) => connectExport;
        }
    }
    var server: {
        (): server.connectExport;
        foo: Date;
    };
    export = server;
    